--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#widgets">Widgets</a></li>
+                    <li><a href="#widgets">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -28,8 +28,8 @@
 
     <section class="hero">
         <div class="container">
-            <h2>Connecting Clients with the Right Mental Health Support</h2>
-            <p>Innovative widget solutions for psychology practices</p>
+            <h2>Connecting Patients with the Right Mental Health Support</h2>
+            <p>Software solutions for psychology practices</p>
         </div>
     </section>
 
@@ -43,7 +43,7 @@
 
     <section id="widgets" class="widgets">
         <div class="container">
-            <h2>Our Widgets</h2>
+            <h2>Services</h2>
             <div class="widget-grid">
                 <div class="widget-card">
                     <div class="widget-icon">📋</div>
@@ -60,6 +60,11 @@
                     <h3>Appointment Scheduler</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula.</p>
                 </div>
+                <div class="widget-card">
+                    <div class="widget-icon">📧</div>
+                    <h3>Lead Generation</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -68,14 +73,13 @@
         <div class="container">
             <h2>Contact Us</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. For more information, reach out to us at:</p>
-            <p class="contact-info">Email: info@psychfinder.com</p>
-            <p class="contact-info">Phone: (123) 456-7890</p>
+            <p class="contact-info">Email: support@psychfinder.com.au</p>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Psychfinder Pty Ltd. All rights reserved.</p>
+            <p>&copy; 2025 Psychfinder Pty Ltd. All rights reserved.</p>
         </div>
     </footer>
 </body>
