update widgets - final

--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
             <h2>Services</h2>
             <div class="widget-grid">
                 <div class="widget-card">
-                    <div class="widget-icon">📋</div>
-                    <h3>Client Intake Form</h3>
+                    <div class="widget-icon">🩺</div>
+                    <h3>Triage System</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula.</p>
                 </div>
                 <div class="widget-card">
-                    <div class="widget-icon">🧠</div>
-                    <h3>Assessment Tool</h3>
+                    <div class="widget-icon">📋</div>
+                    <h3>Presentation Assessment</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula.</p>
                 </div>
                 <div class="widget-card">
                     <div class="widget-icon">📆</div>
-                    <h3>Appointment Scheduler</h3>
+                    <h3>Appointment Management</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula.</p>
                 </div>
                 <div class="widget-card">
@@ -65,6 +65,18 @@
                     <h3>Lead Generation</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula.</p>
                 </div>
+                 <div class="widget-card">
+                    <div class="widget-icon">🇦🇺</div>
+                    <h3>Australian Owned</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula.</p>
+                </div>
+                <div class="widget-card">
+                    <div class="widget-icon">🔒</div>
+                    <h3>OAIC Compliant</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula.</p>
+                </div>
+                
+                
             </div>
         </div>
     </section>
