--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula.</p>
                 </div>
                 <div class="widget-card">
-                    <div class="widget-icon">📧</div>
+                    <div class="widget-icon">📨</div>
                     <h3>Lead Generation</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula.</p>
                 </div>
