--- a/kingstreet.html
+++ b/kingstreet.html
@@ -129,19 +129,19 @@
                                             <input class="field-input" maxlength="256" name="name-2" data-name="Name 2" placeholder="" type="text" id="name-2" required="">
                                         </div>
                                         <div class="field-wrap half">
-                                            <label for="Email-2" class="field-label">Email address*</label>
+                                            <label for="Email-2" class="field-label"><strong>Email address</strong>*</label>
                                             <input class="field-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="" type="email" id="Email-2" required="">
                                         </div>
                                         <div class="field-wrap half">
-                                            <label for="Phone-2" class="field-label">Contact number*</label>
+                                            <label for="Phone-2" class="field-label"><strong>Contact number</strong>*</label>
                                             <input class="field-input" maxlength="256" name="Phone-2" data-name="Phone 2" placeholder="" type="tel" id="Phone-2" required="">
                                         </div>
                                         <div class="field-wrap half">
-                                            <label for="Age-2" class="field-label">Age of client being referred</label>
+                                            <label for="Age-2" class="field-label"><strong>Age of client being referred</strong></label>
                                             <input class="field-input" maxlength="256" name="Age-2" data-name="Age 2" placeholder="" type="number" id="Age-2" required="">
                                         </div>
                                         <div class="field-wrap half">
-                                            <label for="Preferred-therapist-2" class="field-label"><strong>Preferred days /time for a 5-10min reception call*</strong></label>
+                                            <label for="Preferred-therapist-2" class="field-label"><strong>Preferred days /time for a 5-10min reception call</strong>*</label>
                                             <input class="field-input" maxlength="256" name="Preferred-therapist-2" data-name="Preferred Therapist 2" placeholder="" type="text" id="Preferred-therapist-2" required="">
                                         </div>
                                         <div class="field-wrap full">
