Demo navbar fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#widgets">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="kingstreet.html">King Street</a></li>
+                    <li><a href="kingstreet.html">King Street Demo</a></li>
                 </ul>
             </nav>
         </div>
